# web_benchmark

./: LICENSE  bench.py  command_lines.txt  db.sqlite3  deploy.yml  gunicorn.sh  pyproject.toml  results.txt  uvicorn.sh  web_benchmark.service  web_benchmark.traefik.yml  web_benchmark_async.service
benchmark/: settings.py  urls.py  views.py
