[tool.poetry]
name = "web_benchmark"
version = "0.1.0"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
gunicorn = "^20.0.4"
jupyter = "^1.0.0"
django-extensions = "^3.0.9"
httpx = "^0.15.4"
uvloop = "^0.14.0"
uvicorn = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
